src = files(
    'app.d',
    'dub/commandline.d',
    'dub/compilers/buildsettings.d',
    'dub/compilers/compiler.d',
    'dub/compilers/dmd.d',
    'dub/compilers/gdc.d',
    'dub/compilers/ldc.d',
    'dub/compilers/utils.d',
    'dub/dependency.d',
    'dub/dependencyresolver.d',
    'dub/description.d',
    'dub/dub.d',
    'dub/generators/build.d',
    'dub/generators/cmake.d',
    'dub/generators/generator.d',
    'dub/generators/sublimetext.d',
    'dub/generators/targetdescription.d',
    'dub/generators/visuald.d',
    'dub/init.d',
    'dub/internal/git.d',
    'dub/internal/libInputVisitor.d',
    'dub/internal/sdlang/ast.d',
    'dub/internal/sdlang/exception.d',
    'dub/internal/sdlang/lexer.d',
    'dub/internal/sdlang/package.d',
    'dub/internal/sdlang/parser.d',
    'dub/internal/sdlang/symbol.d',
    'dub/internal/sdlang/token.d',
    'dub/internal/sdlang/util.d',
    'dub/internal/utils.d',
    'dub/internal/vibecompat/core/file.d',
    'dub/internal/vibecompat/core/log.d',
    'dub/internal/vibecompat/data/json.d',
    'dub/internal/vibecompat/data/serialization.d',
    'dub/internal/vibecompat/data/utils.d',
    'dub/internal/vibecompat/inet/path.d',
    'dub/internal/vibecompat/inet/url.d',
    'dub/package_.d',
    'dub/packagemanager.d',
    'dub/packagesupplier.d',
    'dub/packagesuppliers/fallback.d',
    'dub/packagesuppliers/filesystem.d',
    'dub/packagesuppliers/maven.d',
    'dub/packagesuppliers/package.d',
    'dub/packagesuppliers/packagesupplier.d',
    'dub/packagesuppliers/registry.d',
    'dub/platform.d',
    'dub/project.d',
    'dub/recipe/io.d',
    'dub/recipe/json.d',
    'dub/recipe/packagerecipe.d',
    'dub/recipe/sdl.d',
    'dub/semver.d',
    'dub/version_.d',
)

executable('dub', src, dependencies: deps, install: true)

